--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="html/css/style.css">
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container"> 
-      <a class="navbar-brand1" href="#"><img src="img/logo.png" alt=""></a>
+      <a class="navbar-brand1" href="#"><img src="html/img/logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -47,13 +47,13 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="img/Arsik-ikan-mas.jpg" class="d-block w-100" alt="...">
+            <img src="html/img/Arsik-ikan-mas.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="img/mie gomak kuah.jpg" class="d-block w-100" alt="...">
+            <img src="html/img/mie gomak goreng.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-            <img src="img/bika ambon.jpg" class="d-block w-100" alt="...">
+            <img src="html/img/bika ambon.jpg" class="d-block w-100" alt="...">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
@@ -84,7 +84,7 @@
     <div class="row">
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-          <img src="img/Arsik-ikan-mas.jpg" class="card-img-top" alt="..." style="height: 200px; object-fit: cover;">
+          <img src="html/img/Arsik-ikan-mas.jpg" class="card-img-top" alt="..." style="height: 200px; object-fit: cover;">
           <div class="card-body">
             <h5 class="card-title">Makanan Ikan Khas Sumatera Utara</h5>
             <p class="card-text">Ikan Mas Arsik, Ikan Naniura, Natinombur, Saksang</p>
@@ -94,7 +94,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-          <img src="img/Daun Ubi Tumbuk.jpg" class="card-img-top" alt="..." style="height: 200px; object-fit: cover;">
+          <img src="html/img/Daun Ubi Tumbuk.jpg" class="card-img-top" alt="..." style="height: 200px; object-fit: cover;">
           <div class="card-body">
             <h5 class="card-title">Sayur Khas Sumatra Utara</h5>
             <p class="card-text">Mie Gomak Goreng, Mie Gomak Kuah, Daun Singkong Tumbuk, Ayang Pakis</p>
@@ -104,7 +104,7 @@
       </div>
       <div class="col-md-4 mb-4">
         <div class="card h-100">
-          <img src="img/sambal rias.jpg" class="card-img-top" alt="..." style="height: 200px; object-fit: cover;">
+          <img src="html/img/sambal andaliman.jpg" class="card-img-top" alt="..." style="height: 200px; object-fit: cover;">
           <div class="card-body">
             <h5 class="card-title">Sambal Khas Batak</h5>
             <p class="card-text">Sambal Andaliman, Sambal Rias, Sambal Tuk-tuk</p>
